--- a/css/main.css
+++ b/css/main.css
@@ -36,7 +36,7 @@ body {
 
 .TopVisual__inner {
   position: absolute;
-  top: 40vh;
+  top: 30vh;
   left: 50%;
   transform: translate(-50%);
   -webkit-transform: translate(-50%);
@@ -47,7 +47,9 @@ body {
 
 @media (max-width: 459px) {
   .TopVisual__inner {
-    top: 15vh;
+    width: 80%;
+    position: absolute;
+    top: 30vh;
     left: 50%;
     transform: translate(-50%);
     -webkit-transform: translate(-50%);
