--- a/css/main.scss
+++ b/css/main.scss
@@ -171,10 +171,52 @@ $tab: 460px; // タブレット
     }
 }
 
+//・・・・・・・ パララックス用背景設定・・・・・・・
+@mixin bg {
+  content: "";
+  display: block;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  z-index: -1;
+  filter: grayscale(60%);
+  -webkit-filter: grayscale(60%);
+}
+
 // ・・・・・・・・・セクション共通・・・・・・・・・
 @mixin Section-title {
   @include fontsize(30);
   text-align: center;
+}
+
+// ・・・・・・・・・ブロック単位でフェイドインさせる・・・・・・・・・
+.fadeIn {
+  opacity: 0.5;
+  transform: translate(0, 10vh);
+  transition: all 1s;
+  -webkit-transform: translate(0, 10vh);
+  -moz-transform: translate(0, 10vh);
+  -ms-transform: translate(0, 10vh);
+  -o-transform: translate(0, 10vh);
+  -webkit-transition: all 1s;
+  -moz-transition: all 1s;
+  -ms-transition: all 1s;
+  -o-transition: all 1s;
+}
+
+/* 画面内に入った状態 */
+.fadeIn.scrollIn {
+  opacity: 1;
+  transform: translate(0, 0);
+  -webkit-transform: translate(0, 0);
+  -moz-transform: translate(0, 0);
+  -ms-transform: translate(0, 0);
+  -o-transform: translate(0, 0);
 }
 
 // ＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝ここまでmixin設定＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝
@@ -533,21 +575,11 @@ $tab: 460px; // タブレット
 
 // パララックス（ios対応のため  background-attachment: fixedは使用しない）
 body::before {
-  content: "";
-  display: block;
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100vh;
+  @include bg();
   background-image: url(../img/Canal.jpeg);
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
-  z-index: -1;
-  @include sp {
-    background-image: url(../img/sptower.jpeg);
-  }
+    @include sp {
+      background-image: url(../img/sptower.jpeg);
+    }
 }
 
 
@@ -556,7 +588,7 @@ body::before {
   position: relative;
   display: block;
   @include black;
-  height: 500px;
+  height: 1500px;
 }
 
 
