--- a/css/main.scss
+++ b/css/main.scss
@@ -1,6 +1,5 @@
 body {
   font-family: 'Rajdhani', sans-serif;
-  font-size: 62.5%;
 }
 
 
@@ -219,11 +218,17 @@ $tab: 460px; // タブレット
   -o-transform: translate(0, 0);
 }
 
-// ＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝ここまでmixin設定＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝
+// ＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝ここまでmixin設定＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝
 
 
 .section-title {
   @include Section-title;
+}
+
+.content-block {
+  @include width;
+  margin: 0 auto;
+  padding: 40px 30px;
 }
 
 // ・・・・・・・・・top-visual・・・・・・・・・
@@ -240,10 +245,11 @@ $tab: 460px; // タブレット
     -moz-transform: translate(-50%);
     -ms-transform: translate(-50%);
     -o-transform: translate(-50%);
+
     @include sp {
       width: 80%;
       position: absolute;
-      top: 30vh;
+      top: 20vh;
       left: 50%;
       transform: translate(-50%);
       -webkit-transform: translate(-50%);
@@ -364,6 +370,11 @@ $tab: 460px; // タブレット
     bottom: 25vh;
     left: 50%;
     z-index: 2;
+    @include sp {
+      position: absolute;
+      bottom: 30vh;
+      left: 50%;
+    }
   }
 
   span {
@@ -455,11 +466,6 @@ $tab: 460px; // タブレット
 .About {
   @include white;
   margin-bottom: 70vh;
-  
-
-&__block {
-  @include width;
-  padding: 50px 20px;
 
   .About-flex {
     display: flex;
@@ -570,7 +576,40 @@ $tab: 460px; // タブレット
       @include fontsize(14);
       line-height: 2;
     }
-  }
+
+    .ABOUT__link {
+      margin-top: 30px;
+      text-align: center;
+      @include fontsize(14);
+
+      button {
+        margin-top: 10px;
+        padding: 20px;
+        background-color: #c0bebe;
+        cursor: pointer;
+        border-radius: 4px;
+        box-shadow: 0px 9px 3px -3px rgba(0,0,0,0.1);
+        -webkit-border-radius: 4px;
+        -moz-border-radius: 4px;
+        -ms-border-radius: 4px;
+        -o-border-radius: 4px;
+        transition: all 0.2s ease-in-out;
+        -webkit-transition: all 0.2s ease-in-out;
+        -moz-transition: all 0.2s ease-in-out;
+        -ms-transition: all 0.2s ease-in-out;
+        -o-transition: all 0.2s ease-in-out;
+          &:hover {
+            transform: scale(1.1);
+            -webkit-transform: scale(1.1);
+            -moz-transform: scale(1.1);
+            -ms-transform: scale(1.1);
+            -o-transform: scale(1.1);
+            }
+          a {
+              color: #333333;
+            }
+        }
+    }
 }
 
 // パララックス（ios対応のため  background-attachment: fixedは使用しない）
@@ -585,31 +624,35 @@ body::before {
 
 // ・・・・・・・・・Service・・・・・・・・・
 .Service {
-  position: relative;
   display: block;
   @include black;
-  height: 1500px;
+  @include fontsize(14);
 }
-
 
 // ・・・・・・・・・work・・・・・・・・・
 .Work {
   @include white;
-  @include width;
+  @include fontsize(14);
+
 }
 
 // ・・・・・・・・・price・・・・・・・・・
 .Price {
   @include black;
-  @include width;
+  @include fontsize(14);
+
 }
 // ・・・・・・・・・contact・・・・・・・・・
 .Contact {
   @include white;
-  @include width;
+  @include fontsize(14);
+
 }
 
 // ・・・・・・・・・footer・・・・・・・・・
 .Footer {
   @include black;
+  width: 100%;
+  text-align: center;
+  padding: 30px 0;
 }
