--- a/css/main.css
+++ b/css/main.css
@@ -6,23 +6,25 @@ body {
 @media (min-width: 1024px) {
   :root {
     font-size: 20px;
+    font-size: 1.25rem;
   }
 }
 
-@media (min-width: 460px) and (max-width: 1024px) {
+@media (min-width: 480px) and (max-width: 1024px) {
   :root {
     font-size: calc(1rem + ((1vw - 7.68px) * 1.5625));
   }
 }
 
-@media (max-width: 459px) {
+@media (max-width: 479px) {
   :root {
-    font-size: 16px;
+    font-size: 14px;
+    font-size: 0.875rem;
   }
 }
 
 .fadeIn {
-  opacity: 0.5;
+  opacity: 0.3;
   transform: translate(0, 10vh);
   transition: all 1s;
   -webkit-transform: translate(0, 10vh);
@@ -77,7 +79,7 @@ body {
   -o-transform: translate(-50%);
 }
 
-@media (max-width: 459px) {
+@media (max-width: 479px) {
   .TopVisual__inner {
     width: 80%;
     position: absolute;
@@ -134,7 +136,7 @@ body {
   opacity: .5;
 }
 
-@media (max-width: 459px) {
+@media (max-width: 479px) {
   .TopVisual .leftBack {
     width: 0;
     height: 0;
@@ -164,7 +166,7 @@ body {
   }
 }
 
-@media (min-width: 460px) and (max-width: 1024px) {
+@media (min-width: 480px) and (max-width: 1024px) {
   .TopVisual .leftBack {
     top: 0;
     left: 0;
@@ -231,7 +233,7 @@ body {
   -webkit-animation: RightfadeInBack 4s ease-in 0s 1 normal;
 }
 
-@media (min-width: 460px) and (max-width: 1024px) {
+@media (min-width: 480px) and (max-width: 1024px) {
   .TopVisual .rightBack {
     top: 60%;
     right: 0;
@@ -313,7 +315,7 @@ body {
   }
 }
 
-@media (max-width: 459px) {
+@media (max-width: 479px) {
   .TopVisual .scroll a {
     position: absolute;
     bottom: 30vh;
@@ -391,7 +393,7 @@ body {
   font-size: 0;
 }
 
-@media (max-width: 459px) {
+@media (max-width: 479px) {
   .Header .Header-inner__list {
     display: inline-block;
     text-align: center;
@@ -408,7 +410,7 @@ body {
   }
 }
 
-@media (min-width: 460px) and (max-width: 1024px) {
+@media (min-width: 480px) and (max-width: 1024px) {
   .Header .Header-inner__list {
     display: inline-block;
     text-align: center;
@@ -465,7 +467,7 @@ body {
   -webkit-filter: grayscale(80%);
 }
 
-@media (max-width: 459px) {
+@media (max-width: 479px) {
   .About .About-flex {
     flex-direction: column;
   }
@@ -506,7 +508,7 @@ body {
   }
 }
 
-@media (min-width: 460px) and (max-width: 1024px) {
+@media (min-width: 480px) and (max-width: 1024px) {
   .About .About-flex {
     justify-content: space-around;
     align-items: center;
@@ -599,41 +601,53 @@ body {
   line-height: 2;
 }
 
-.About .ABOUT__link {
+.About .About__link {
   margin-top: 30px;
+  font-size: 16px;
+  font-size: 1rem;
   text-align: center;
-  font-size: 14px;
-  font-size: 0.875rem;
 }
 
-.About .ABOUT__link button {
-  margin-top: 10px;
+.About .About__link .About__link-button {
+  margin-top: 30px;
+  display: inline-block;
+  position: relative;
+}
+
+.About .About__link .About__link-button button {
   padding: 20px;
-  background-color: #c0bebe;
-  cursor: pointer;
-  border-radius: 4px;
-  box-shadow: 0px 9px 3px -3px rgba(0, 0, 0, 0.1);
-  -webkit-border-radius: 4px;
-  -moz-border-radius: 4px;
-  -ms-border-radius: 4px;
-  -o-border-radius: 4px;
-  transition: all 0.2s ease-in-out;
-  -webkit-transition: all 0.2s ease-in-out;
-  -moz-transition: all 0.2s ease-in-out;
-  -ms-transition: all 0.2s ease-in-out;
-  -o-transition: all 0.2s ease-in-out;
+  position: relative;
+  background: #F7F7F7;
+  border: none;
 }
 
-.About .ABOUT__link button:hover {
-  transform: scale(1.1);
-  -webkit-transform: scale(1.1);
-  -moz-transform: scale(1.1);
-  -ms-transform: scale(1.1);
-  -o-transform: scale(1.1);
+.About .About__link .About__link-button .border {
+  position: absolute;
+  background: none;
+  transition: all .5s ease-in-out;
 }
 
-.About .ABOUT__link button a {
-  color: #333333;
+.About .About__link .About__link-button .border:nth-of-type(1) {
+  top: 0;
+  left: 0;
+  border-left: 1px solid #333333;
+  border-top: 1px solid #333333;
+  width: 30px;
+  height: 30px;
+}
+
+.About .About__link .About__link-button .border:nth-of-type(2) {
+  bottom: 0;
+  right: 0;
+  border-right: 1px solid #333333;
+  border-bottom: 1px solid #333333;
+  width: 30px;
+  height: 30px;
+}
+
+.About .About__link .About__link-button:hover .border {
+  width: 105%;
+  height: 110%;
 }
 
 body::before {
@@ -653,7 +667,7 @@ body::before {
   background-image: url(../img/Canal.jpeg);
 }
 
-@media (max-width: 459px) {
+@media (max-width: 479px) {
   body::before {
     background-image: url(../img/sptower.jpeg);
   }
@@ -665,6 +679,7 @@ body::before {
   color: #EAEAEA;
   font-size: 14px;
   font-size: 0.875rem;
+  height: 600px;
 }
 
 .Work {
@@ -672,6 +687,7 @@ body::before {
   color: #333333;
   font-size: 14px;
   font-size: 0.875rem;
+  height: 600px;
 }
 
 .Price {
@@ -679,6 +695,7 @@ body::before {
   color: #EAEAEA;
   font-size: 14px;
   font-size: 0.875rem;
+  height: 600px;
 }
 
 .Contact {
@@ -686,6 +703,7 @@ body::before {
   color: #333333;
   font-size: 14px;
   font-size: 0.875rem;
+  height: 600px;
 }
 
 .Footer {
