--- a/css/main.css
+++ b/css/main.css
@@ -611,31 +611,28 @@ body {
 
 .About .About__link {
   margin-top: 30px;
-  font-size: 16px;
-  font-size: 1rem;
   text-align: center;
+  position: relative;
 }
 
 .About .About__link .About__link-button {
   margin-top: 30px;
   display: inline-block;
   position: relative;
+  padding: 20px 30px;
+  cursor: pointer;
+  font-size: 12px;
+  font-size: 0.75rem;
+  color: #333333;
 }
 
-.About .About__link .About__link-button button {
-  padding: 20px;
-  position: relative;
-  background: #F7F7F7;
-  border: none;
-}
-
-.About .About__link .About__link-button .border {
+.About .About__link .border {
   position: absolute;
   background: none;
   transition: all .5s ease-in-out;
 }
 
-.About .About__link .About__link-button .border:nth-of-type(1) {
+.About .About__link .border:nth-of-type(1) {
   top: 0;
   left: 0;
   border-left: 1px solid #333333;
@@ -644,7 +641,7 @@ body {
   height: 30px;
 }
 
-.About .About__link .About__link-button .border:nth-of-type(2) {
+.About .About__link .border:nth-of-type(2) {
   bottom: 0;
   right: 0;
   border-right: 1px solid #333333;
@@ -653,9 +650,9 @@ body {
   height: 30px;
 }
 
-.About .About__link .About__link-button:hover .border {
-  width: 105%;
-  height: 110%;
+.About .About__link:hover .border {
+  width: 110%;
+  height: 120%;
 }
 
 body::before {
@@ -691,6 +688,7 @@ body::before {
 }
 
 .Work {
+  display: block;
   background: #F7F7F7;
   color: #333333;
   font-size: 14px;
@@ -699,6 +697,7 @@ body::before {
 }
 
 .Price {
+  display: block;
   background: #c0bebe;
   color: #EAEAEA;
   font-size: 14px;
@@ -707,11 +706,12 @@ body::before {
 }
 
 .Contact {
+  display: block;
   background: #F7F7F7;
   color: #333333;
   font-size: 14px;
   font-size: 0.875rem;
-  height: 600px;
+  height: 1000px;
 }
 
 .Footer {
