--- a/css/main.scss
+++ b/css/main.scss
@@ -582,9 +582,13 @@ $tab: 480px; // タブレット
 
     // コンタクトフォームへのリンク
     .About__link {
+      display: inline-block;
       margin-top: 30px;
       text-align: center;
       position: relative;
+      top: 0%;
+      left: 50%;
+      @include centertransform;
 
       .About__link-button {
         margin-top: 30px;
@@ -594,7 +598,6 @@ $tab: 480px; // タブレット
         cursor: pointer;
         @include fontsize(12);
         color: #333333;
-        
         }
         .border{
           position:absolute;
