--- a/css/main.scss
+++ b/css/main.scss
@@ -250,7 +250,7 @@ $tab: 480px; // タブレット
     @include sp {
       width: 80%;
       position: absolute;
-      top: 15vh;
+      top: 20vh;
       left: 50%;
       transform: translate(-50%);
       -webkit-transform: translate(-50%);
@@ -647,9 +647,47 @@ body::before {
   display: block;
   @include black;
   @include fontsize(14);
-  height: 600px;
-}
+  
+  &__block {
+    margin-top: 30px;
+    .Service__title {
+      @include fontsize(20);
+      width: 100%;
+      margin: 0 auto;
+      text-align: center;
 
+      .fa-laptop-code {
+        margin-right: 20px;
+      }
+
+      p {
+        display: inline-block;
+      }
+    }
+
+    .Service__text {
+      @include fontsize(16);
+      margin: 20px 0;
+    }
+
+  }
+  
+  &__about {
+    @include fontsize(14);
+    margin-bottom: 30px;
+
+    .Service__about-list {
+      padding: 10px 0;
+    }
+        .Service__about-list::before {
+          font-family: "Font Awesome 5 Free";
+          font-weight: 900;
+          content: "\f00c";
+          margin-bottom: 5px;
+        }
+  }
+
+}
 // ・・・・・・・・・work・・・・・・・・・
 .Work {
   display: block;
