--- a/css/main.css
+++ b/css/main.css
@@ -23,6 +23,60 @@ body {
   }
 }
 
+.link {
+  display: inline-block;
+  margin-top: 30px;
+  text-align: center;
+  position: relative;
+  top: 0%;
+  left: 50%;
+  transform: translate(-50%);
+  -webkit-transform: translate(-50%);
+  -moz-transform: translate(-50%);
+  -ms-transform: translate(-50%);
+  -o-transform: translate(-50%);
+}
+
+.link .link-button {
+  margin-top: 30px;
+  display: inline-block;
+  position: relative;
+  padding: 20px 30px;
+  cursor: pointer;
+  font-size: 12px;
+  font-size: 0.75rem;
+  color: #333333;
+}
+
+.link .link-button .border {
+  position: absolute;
+  background: none;
+  transition: all .5s ease-in-out;
+}
+
+.link .link-button .border:nth-of-type(1) {
+  top: 0;
+  left: 0;
+  border-left: 1px solid #333333;
+  border-top: 1px solid #333333;
+  width: 30px;
+  height: 30px;
+}
+
+.link .link-button .border:nth-of-type(2) {
+  bottom: 0;
+  right: 0;
+  border-right: 1px solid #333333;
+  border-bottom: 1px solid #333333;
+  width: 30px;
+  height: 30px;
+}
+
+.link .link-button:hover .border {
+  width: 110%;
+  height: 120%;
+}
+
 .fadeIn {
   opacity: 0.3;
   transform: translate(0, 10vh);
@@ -55,10 +109,10 @@ body {
 
 .content-block {
   width: 100vw;
-  max-width: 1200px;
+  max-width: 1300px;
   margin: 0 auto;
   margin: 0 auto;
-  padding: 40px 30px;
+  padding: 60px 30px 40px 30px;
 }
 
 .TopVisual {
@@ -481,7 +535,7 @@ body {
     flex-direction: column;
   }
   .About .About-flex__photo {
-    max-width: 200px;
+    max-width: 10rem;
     margin: 0 auto;
   }
   .About .About-flex__photo img {
@@ -605,63 +659,7 @@ body {
 
 .About .About__theme {
   margin-top: 30px;
-  font-size: 14px;
-  font-size: 0.875rem;
   line-height: 2;
-}
-
-.About .About__link {
-  display: inline-block;
-  margin-top: 30px;
-  text-align: center;
-  position: relative;
-  top: 0%;
-  left: 50%;
-  transform: translate(-50%);
-  -webkit-transform: translate(-50%);
-  -moz-transform: translate(-50%);
-  -ms-transform: translate(-50%);
-  -o-transform: translate(-50%);
-}
-
-.About .About__link .About__link-button {
-  margin-top: 30px;
-  display: inline-block;
-  position: relative;
-  padding: 20px 30px;
-  cursor: pointer;
-  font-size: 12px;
-  font-size: 0.75rem;
-  color: #333333;
-}
-
-.About .About__link .About__link-button .border {
-  position: absolute;
-  background: none;
-  transition: all .5s ease-in-out;
-}
-
-.About .About__link .About__link-button .border:nth-of-type(1) {
-  top: 0;
-  left: 0;
-  border-left: 1px solid #333333;
-  border-top: 1px solid #333333;
-  width: 30px;
-  height: 30px;
-}
-
-.About .About__link .About__link-button .border:nth-of-type(2) {
-  bottom: 0;
-  right: 0;
-  border-right: 1px solid #333333;
-  border-bottom: 1px solid #333333;
-  width: 30px;
-  height: 30px;
-}
-
-.About .About__link .About__link-button:hover .border {
-  width: 110%;
-  height: 120%;
 }
 
 body::before {
@@ -691,8 +689,6 @@ body::before {
   display: block;
   background: #c0bebe;
   color: #EAEAEA;
-  font-size: 14px;
-  font-size: 0.875rem;
 }
 
 .Service__block {
@@ -720,6 +716,7 @@ body::before {
   font-size: 1rem;
   margin: 20px 0;
   text-align: center;
+  line-height: 1.3;
 }
 
 @media (max-width: 479px) {
@@ -743,13 +740,14 @@ body::before {
 }
 
 .Service .skill h3 {
-  font-size: 20px;
-  font-size: 1.25rem;
+  font-size: 24px;
+  font-size: 1.5rem;
   text-align: center;
 }
 
 .Service .skill .skill__container {
   display: flex;
+  line-height: 1.3;
 }
 
 @media (max-width: 479px) {
@@ -797,36 +795,62 @@ body::before {
   }
 }
 
-.Service .skill .skill__container .skill__container-about {
-  font-size: 14px;
-  font-size: 0.875rem;
-}
-
 .Work {
   display: block;
   background: #F7F7F7;
   color: #333333;
+}
+
+.Work .Work__text {
   font-size: 14px;
   font-size: 0.875rem;
-  height: 600px;
+  margin-top: 2rem;
+  text-align: center;
+}
+
+.Work .Work__text--sm {
+  font-size: 12px;
+  font-size: 0.75rem;
+  margin-top: 0.5rem;
+  text-align: center;
+}
+
+.Work .Work__capture {
+  padding-top: 2rem;
+  display: grid;
+  column-gap: 3rem;
+  row-gap: 3rem;
+  grid-template-columns: repeat(auto-fill, minmax(260px, 1fr));
+}
+
+.Work .Work__capture img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border: 1px solid #c0bebe;
+  box-shadow: 0px 9px 3px -3px rgba(0, 0, 0, 0.1);
+  -webkit-box-shadow: 0px 9px 3px -3px rgba(0, 0, 0, 0.1);
+  -moz-box-shadow: 0px 9px 3px -3px rgba(0, 0, 0, 0.1);
+}
+
+.Work .Work__capture-link {
+  display: block;
+  margin: 3rem auto 0;
+  text-align: center;
+  width: 20%;
+  color: #333;
 }
 
 .Price {
   display: block;
   background: #c0bebe;
   color: #EAEAEA;
-  font-size: 14px;
-  font-size: 0.875rem;
-  height: 600px;
 }
 
 .Contact {
   display: block;
   background: #F7F7F7;
   color: #333333;
-  font-size: 14px;
-  font-size: 0.875rem;
-  height: 1000px;
 }
 
 .Footer {
