--- a/css/main.css
+++ b/css/main.css
@@ -225,7 +225,7 @@ body {
     top: 0;
     left: 0;
     width: 50%;
-    height: 40%;
+    height: 30%;
     background: #333;
     animation: LeftfadeInBack 4s ease-in 0s 1 normal;
     -webkit-animation: LeftfadeInBack 4s ease-in 0s 1 normal;
@@ -255,7 +255,7 @@ body {
     top: 0;
     left: 0;
     width: 50%;
-    height: 40%;
+    height: 30%;
     background: #333;
     animation: LeftfadeInBack 4s ease-in 0s 1 normal;
     -webkit-animation: LeftfadeInBack 4s ease-in 0s 1 normal;
@@ -687,7 +687,7 @@ body::before {
 
 .Service {
   display: block;
-  background: #c0bebe;
+  background: #7a7979;
   color: #EAEAEA;
 }
 
@@ -808,19 +808,20 @@ body::before {
   text-align: center;
 }
 
-.Work .Work__text--sm {
-  font-size: 12px;
-  font-size: 0.75rem;
-  margin-top: 0.5rem;
-  text-align: center;
-}
-
 .Work .Work__capture {
   padding-top: 2rem;
-  display: grid;
-  column-gap: 3rem;
-  row-gap: 3rem;
-  grid-template-columns: repeat(auto-fill, minmax(260px, 1fr));
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
+
+.Work .Work__capture .work__capture-img {
+  position: relative;
+  width: 300px;
+  min-width: 250px;
+  height: 300px;
+  min-height: 250px;
+  margin: 1rem;
 }
 
 .Work .Work__capture img {
@@ -833,6 +834,25 @@ body::before {
   -moz-box-shadow: 0px 9px 3px -3px rgba(0, 0, 0, 0.1);
 }
 
+.Work .Work__capture .caption {
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: none;
+  width: 100%;
+  height: 100%;
+  background: rgba(51, 51, 51, 0.7);
+  color: #EAEAEA;
+}
+
+.Work .Work__capture .caption p {
+  position: absolute;
+  top: 70%;
+  padding: 0 1rem;
+  font-size: 12px;
+  font-size: 0.75rem;
+}
+
 .Work .Work__capture-link {
   display: block;
   margin: 3rem auto 0;
@@ -843,7 +863,7 @@ body::before {
 
 .Price {
   display: block;
-  background: #c0bebe;
+  background: #7a7979;
   color: #EAEAEA;
 }
 
@@ -854,7 +874,7 @@ body::before {
 }
 
 .Footer {
-  background: #c0bebe;
+  background: #7a7979;
   color: #EAEAEA;
   width: 100%;
   text-align: center;
