--- a/css/main.scss
+++ b/css/main.scss
@@ -16,7 +16,7 @@ body {
   color: $color;
 }
 
-@mixin black ($background: #c0bebe , $color: #EAEAEA, $width: 100vw){
+@mixin black ($background: #7a7979 , $color: #EAEAEA, $width: 100vw){
   background: $background;
   color: $color;
 }
@@ -366,7 +366,7 @@ $tab: 480px; // タブレット
       top: 0;
       left: 0;
       width: 50%;
-      height: 40%;
+      height: 30%;
       background: #333;
       animation: LeftfadeInBack 4s ease-in 0s 1 normal;
       -webkit-animation: LeftfadeInBack 4s ease-in 0s 1 normal;
@@ -377,7 +377,7 @@ $tab: 480px; // タブレット
       top: 0;
       left: 0;
       width: 50%;
-      height: 40%;
+      height: 30%;
       background: #333;
       animation: LeftfadeInBack 4s ease-in 0s 1 normal;
       -webkit-animation: LeftfadeInBack 4s ease-in 0s 1 normal;
@@ -737,22 +737,23 @@ body::before {
     @include fontsize(14);
     margin-top: 2rem;
     text-align: center;
-    &--sm {
-      @include fontsize(12);
-      margin-top: 0.5rem;
-      text-align: center;
-    }
   }
 
   .Work__capture {
     padding-top: 2rem;
-    display: grid;
-    column-gap: 3rem;
-    row-gap: 3rem;
-    grid-template-columns: repeat(
-      auto-fill,
-      minmax(260px, 1fr)
-      );
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+
+
+    .work__capture-img {
+      position: relative;
+      width: 300px;
+      min-width: 250px;
+      height: 300px;
+      min-height: 250px;
+      margin: 1rem;
+    }
     
     img {
       width: 100%;
@@ -763,7 +764,26 @@ body::before {
       -webkit-box-shadow: 0px 9px 3px -3px rgba(0,0,0,0.1);
       -moz-box-shadow: 0px 9px 3px -3px rgba(0,0,0,0.1);
     }
+
+    .caption {
+      position: absolute;
+      top: 0;
+      left: 0;
+      display: none;
+      width: 100%;
+      height: 100%;
+      background: rgba($color: #333, $alpha: .7);
+      color: #EAEAEA;
+
+      p {
+        position: absolute;
+        top: 70%;
+        padding:0 1rem;
+        @include fontsize(12);
+      }
+    }
   }
+
   .Work__capture-link {
     display: block;
     margin: 3rem auto 0;
