--- a/css/main.css
+++ b/css/main.css
@@ -25,7 +25,7 @@ body {
 
 .link {
   display: inline-block;
-  margin-top: 30px;
+  margin-top: 1rem;
   text-align: center;
   position: relative;
   top: 0%;
@@ -38,10 +38,10 @@ body {
 }
 
 .link .link-button {
-  margin-top: 30px;
+  margin-top: 3rem;
   display: inline-block;
   position: relative;
-  padding: 20px 30px;
+  padding: 2rem 3rem;
   cursor: pointer;
   font-size: 12px;
   font-size: 0.75rem;
@@ -59,8 +59,8 @@ body {
   left: 0;
   border-left: 1px solid #333333;
   border-top: 1px solid #333333;
-  width: 30px;
-  height: 30px;
+  width: 3rem;
+  height: 3rem;
 }
 
 .link .link-button .border:nth-of-type(2) {
@@ -68,8 +68,8 @@ body {
   right: 0;
   border-right: 1px solid #333333;
   border-bottom: 1px solid #333333;
-  width: 30px;
-  height: 30px;
+  width: 3rem;
+  height: 3rem;
 }
 
 .link .link-button:hover .border {
@@ -112,7 +112,7 @@ body {
   max-width: 1300px;
   margin: 0 auto;
   margin: 0 auto;
-  padding: 60px 30px 40px 30px;
+  padding: 6rem 3rem 4rem 3rem;
 }
 
 .TopVisual {
@@ -149,7 +149,7 @@ body {
 
 .TopVisual__inner h1 {
   text-align: center;
-  margin-bottom: 30px;
+  margin-bottom: 3rem;
   font-size: 30px;
   font-size: 1.875rem;
 }
@@ -523,7 +523,7 @@ body {
 
 .About .About-flex {
   display: flex;
-  margin-top: 30px;
+  margin-top: 3rem;
   font-size: 16px;
   font-size: 1rem;
   filter: grayscale(80%);
@@ -548,18 +548,18 @@ body {
     -o-border-radius: 100%;
   }
   .About .About-flex__text {
-    margin-top: 30px;
+    margin-top: 3rem;
   }
   .About .About-flex__text--name {
     text-align: center;
-    margin: 20px 0;
+    margin: 2rem 0;
     position: relative;
   }
   .About .About-flex__text--name::after {
     position: absolute;
     content: '';
     width: 80%;
-    bottom: -10px;
+    bottom: -1rem;
     left: 50%;
     transform: translate(-50%);
     -webkit-transform: translate(-50%);
@@ -589,20 +589,20 @@ body {
     -o-border-radius: 100%;
   }
   .About .About-flex__text {
-    width: 50%;
-    margin-top: 30px;
+    width: 20rem;
+    margin-top: 3rem;
     line-height: 1.5;
   }
   .About .About-flex__text--name {
     text-align: center;
-    margin-bottom: 30px;
+    margin-bottom: 3rem;
     position: relative;
   }
   .About .About-flex__text--name::after {
     position: absolute;
     content: '';
     width: 70%;
-    bottom: -10px;
+    bottom: -1rem;
     left: 50%;
     transform: translate(-50%);
     -webkit-transform: translate(-50%);
@@ -633,19 +633,19 @@ body {
   }
   .About .About-flex__text {
     width: 50%;
-    margin-top: 30px;
+    margin-top: 3rem;
     line-height: 1.5;
   }
   .About .About-flex__text--name {
     text-align: center;
-    margin-bottom: 30px;
+    margin-bottom: 3rem;
     position: relative;
   }
   .About .About-flex__text--name::after {
     position: absolute;
     content: '';
     width: 70%;
-    bottom: -10px;
+    bottom: -1rem;
     left: 50%;
     transform: translate(-50%);
     -webkit-transform: translate(-50%);
@@ -658,8 +658,53 @@ body {
 }
 
 .About .About__theme {
-  margin-top: 30px;
+  margin-top: 3rem;
   line-height: 2;
+}
+
+.About .About__theme-history {
+  margin: 2rem 0 4rem;
+  position: relative;
+}
+
+.About .About__theme-history p {
+  text-align: center;
+  margin-bottom: 2rem;
+  position: relative;
+}
+
+.About .About__theme-history p::after {
+  position: absolute;
+  content: '';
+  width: 10%;
+  bottom: -0.5rem;
+  left: 50%;
+  transform: translate(-50%);
+  -webkit-transform: translate(-50%);
+  -moz-transform: translate(-50%);
+  -ms-transform: translate(-50%);
+  -o-transform: translate(-50%);
+  height: 1px;
+  background: #333;
+}
+
+.About .About__theme-history .year {
+  width: 6rem;
+}
+
+.About .About__theme-history::after {
+  position: absolute;
+  content: '';
+  width: 100%;
+  bottom: -1rem;
+  left: 50%;
+  transform: translate(-50%);
+  -webkit-transform: translate(-50%);
+  -moz-transform: translate(-50%);
+  -ms-transform: translate(-50%);
+  -o-transform: translate(-50%);
+  height: 1px;
+  background: #333;
 }
 
 body::before {
@@ -692,7 +737,7 @@ body::before {
 }
 
 .Service__block {
-  margin-top: 30px;
+  margin-top: 3rem;
 }
 
 .Service__block .Service__title {
@@ -704,7 +749,7 @@ body::before {
 }
 
 .Service__block .Service__title .fa-laptop-code {
-  margin-right: 20px;
+  margin-right: 2rem;
 }
 
 .Service__block .Service__title p {
@@ -714,7 +759,7 @@ body::before {
 .Service__block .Service__text {
   font-size: 16px;
   font-size: 1rem;
-  margin: 20px 0;
+  margin: 2rem 0 3rem;
   text-align: center;
   line-height: 1.3;
 }
@@ -728,15 +773,16 @@ body::before {
 .Service__about {
   font-size: 16px;
   font-size: 1rem;
-  margin-bottom: 30px;
+  margin-bottom: 3rem;
+  line-height: 1.3;
 }
 
 .Service__about td {
-  padding-bottom: 10px;
+  padding-bottom: 1rem;
 }
 
 .Service__about .fa-check {
-  margin-right: 10px;
+  margin-right: 1rem;
 }
 
 .Service .skill h3 {
@@ -774,19 +820,19 @@ body::before {
 
 .Service .skill .skill__container-title {
   text-align: center;
-  padding: 10px;
+  padding: 1rem;
 }
 
 .Service .skill .skill__container-title .fab {
   font-size: 30px;
   font-size: 1.875rem;
-  padding: 10px;
+  padding: 1rem;
 }
 
 .Service .skill .skill__container-title p {
   font-size: 20px;
   font-size: 1.25rem;
-  padding-bottom: 20px;
+  padding-bottom: 2rem;
 }
 
 @media (max-width: 479px) {
@@ -812,16 +858,21 @@ body::before {
   padding-top: 2rem;
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-around;
+  justify-content: center;
 }
 
 .Work .Work__capture .work__capture-img {
   position: relative;
-  width: 300px;
-  min-width: 250px;
-  height: 300px;
-  min-height: 250px;
+  width: 15rem;
+  height: 10rem;
   margin: 1rem;
+}
+
+@media (min-width: 1024px) {
+  .Work .Work__capture .work__capture-img {
+    width: 10rem;
+    height: 10rem;
+  }
 }
 
 .Work .Work__capture img {
