--- a/css/main.scss
+++ b/css/main.scss
@@ -196,7 +196,7 @@ $tab: 480px; // タブレット
 // リンクボタン
 .link {
   display: inline-block;
-  margin-top: 30px;
+  margin-top: 1rem;
   text-align: center;
   position: relative;
   top: 0%;
@@ -204,10 +204,10 @@ $tab: 480px; // タブレット
   @include centertransform;
 
   .link-button {
-    margin-top: 30px;
+    margin-top: 3rem;
     display: inline-block;
     position: relative;
-    padding: 20px 30px;
+    padding: 2rem 3rem;
     cursor: pointer;
     @include fontsize(12);
     color: #333333;
@@ -222,8 +222,8 @@ $tab: 480px; // タブレット
         left:0;
         border-left:1px solid #333333;
         border-top:1px solid #333333;
-        width:30px;
-        height:30px;
+        width:3rem;
+        height:3rem;
       }
       
       &:nth-of-type(2){
@@ -231,8 +231,8 @@ $tab: 480px; // タブレット
         right:0;
         border-right:1px solid #333333;
         border-bottom:1px solid #333333;
-        width:30px;
-        height:30px;
+        width:3rem;
+        height:3rem;
       }
       
     }
@@ -279,7 +279,7 @@ $tab: 480px; // タブレット
 .content-block {
   @include width;
   margin: 0 auto;
-  padding: 60px 30px 40px 30px;
+  padding: 6rem 3rem 4rem 3rem;
 }
 
 // ・・・・・・・・・top-visual・・・・・・・・・
@@ -310,7 +310,7 @@ $tab: 480px; // タブレット
     }
     h1 {
       text-align: center;
-      margin-bottom: 30px;
+      margin-bottom: 3rem;
       @include fontsize(30);
     }
     p {
@@ -522,7 +522,7 @@ $tab: 480px; // タブレット
 
   .About-flex {
     display: flex;
-    margin-top: 30px;
+    margin-top: 3rem;
     @include fontsize(16);
     filter: grayscale(80%);
     -webkit-filter: grayscale(80%);
@@ -539,18 +539,18 @@ $tab: 480px; // タブレット
         }
       }
       &__text {
-        margin-top: 30px;
+        margin-top: 3rem;
       }
       &__text--name {
         text-align: center;
-        margin: 20px 0;
+        margin: 2rem 0;
         position: relative;
       }
       &__text--name::after {
         position: absolute;
         content: '';
         width: 80%;
-        bottom: -10px;
+        bottom: -1rem;
         left: 50%;
         @include centertransform;
         height: 1px;
@@ -570,20 +570,20 @@ $tab: 480px; // タブレット
         }
       }
       &__text {
-        width: 50%;
-        margin-top: 30px;
+        width: 20rem;
+        margin-top: 3rem;
         line-height: 1.5;
       }
       &__text--name {
         text-align: center;
-        margin-bottom: 30px;
+        margin-bottom: 3rem;
         position: relative;
       }
       &__text--name::after {
         position: absolute;
         content: '';
         width: 70%;
-        bottom: -10px;
+        bottom: -1rem;
         left: 50%;
         @include centertransform;
         height: 1px;
@@ -604,19 +604,19 @@ $tab: 480px; // タブレット
     }
     &__text {
       width: 50%;
-      margin-top: 30px;
+      margin-top: 3rem;
       line-height: 1.5;
     }
     &__text--name {
       text-align: center;
-      margin-bottom: 30px;
+      margin-bottom: 3rem;
       position: relative;
       }
     &__text--name::after {
         position: absolute;
         content: '';
         width: 70%;
-        bottom: -10px;
+        bottom: -1rem;
         left: 50%;
         @include centertransform;
         height: 1px;
@@ -625,8 +625,44 @@ $tab: 480px; // タブレット
     }
   }
     .About__theme {
-      margin-top: 30px;
+      margin-top: 3rem;
       line-height: 2;
+      
+      &-history {
+        margin: 2rem 0 4rem;
+        position: relative;
+
+        p {
+          text-align: center;
+          margin-bottom: 2rem;
+          position: relative;
+        }
+        p::after {
+        position: absolute;
+        content: '';
+        width: 10%;
+        bottom: -0.5rem;
+        left: 50%;
+        @include centertransform;
+        height: 1px;
+        background: #333;
+        }
+
+        .year {
+          width: 6rem;
+        }
+      }
+
+      &-history::after {
+        position: absolute;
+        content: '';
+        width: 100%;
+        bottom: -1rem;
+        left: 50%;
+        @include centertransform;
+        height: 1px;
+        background: #333;
+      }
     }
 }
 
@@ -646,7 +682,7 @@ body::before {
   @include black;
   
   &__block {
-    margin-top: 30px;
+    margin-top: 3rem;
     .Service__title {
       @include fontsize(20);
       width: 100%;
@@ -654,7 +690,7 @@ body::before {
       text-align: center;
 
       .fa-laptop-code {
-        margin-right: 20px;
+        margin-right: 2rem;
       }
 
       p {
@@ -664,7 +700,7 @@ body::before {
 
     .Service__text {
       @include fontsize(16);
-      margin: 20px 0;
+      margin: 2rem 0 3rem;
       text-align: center;
       line-height: 1.3;
       @include sp {
@@ -676,13 +712,14 @@ body::before {
   
   &__about {
     @include fontsize(16);
-    margin-bottom: 30px;
+    margin-bottom: 3rem;
+    line-height: 1.3;
     
     td {
-      padding-bottom: 10px;
+      padding-bottom: 1rem;
     }
     .fa-check {
-      margin-right: 10px;
+      margin-right: 1rem;
     }
   }
 
@@ -712,14 +749,14 @@ body::before {
 
       &-title {
         text-align: center;
-        padding: 10px;
+        padding: 1rem;
         .fab {
           @include fontsize(30);
-          padding: 10px;
+          padding: 1rem;
         }
         p {
           @include fontsize(20);
-          padding-bottom: 20px;
+          padding-bottom: 2rem;
           @include sp {
             padding-bottom: 0;
           }
@@ -743,16 +780,19 @@ body::before {
     padding-top: 2rem;
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-around;
+    justify-content: center;
 
 
     .work__capture-img {
       position: relative;
-      width: 300px;
-      min-width: 250px;
-      height: 300px;
-      min-height: 250px;
+      width: 15rem;
+      height: 10rem;
       margin: 1rem;
+
+      @include pc {
+        width: 10rem;
+        height: 10rem;
+      }
     }
     
     img {
