--- a/css/main.css
+++ b/css/main.css
@@ -115,6 +115,12 @@ body {
   padding: 6rem 3rem 4rem 3rem;
 }
 
+@media (max-width: 479px) {
+  .content-block {
+    padding: 6rem 1rem 4rem 1rem;
+  }
+}
+
 .TopVisual {
   position: relative;
   background: #F7F7F7;
@@ -535,7 +541,7 @@ body {
     flex-direction: column;
   }
   .About .About-flex__photo {
-    max-width: 10rem;
+    max-width: 15rem;
     margin: 0 auto;
   }
   .About .About-flex__photo img {
